Added Elvanto Domain environment Variable
Started work on formatting the message to link to the person.

--- a/app.json
+++ b/app.json
@@ -13,6 +13,10 @@
       "description": "Elvanto API Key",
       "value": ""
     },
+    "ELVANTO_DOMAIN": {
+      "description": "Domain of your Elvanto Account",
+      "value": ""
+    },
     "SLACK_USERS_WHITELIST": {
       "description": "Comma separated list of slack users with permission to see contact details. If blank, any user can perform a search.",
       "value": ""
